flask_stuff/static/styles/style.css
body {
    background-color: rgb(12, 22, 35);
    color: white;
    font-family: sans-serif;
    padding-bottom: 20px;
}

.big-grid {
    margin: 5px;
    padding-right: 10px;
    padding-left: 10px;
    padding-bottom: 20px;
    min-width: 1000px;
    width: 98%;
}

.top-section {
    display: grid;
    grid-template-columns: 1fr 3px 1fr 3px 1fr;
    border: 3px solid rgb(203, 203, 203);
    
    align-content: space-between;
    column-gap: 20px;
    align-items: center;

    margin-bottom: 10px;
}

.vertical-divider {
    border-right: 2px solid rgb(203, 203, 203);
    height: 80%;
}

.title {
    font-family: sans-serif;
    font-weight: 700;
    font-size: 50px;
    margin-left: 20px;
    position: relative;
}

.title-top {
    margin-bottom: 5px;
    font-size: 40px;
}

.divider {
    width: 69%;
    border-bottom: 3px solid rgb(203, 203, 203);
    margin-top: 12px;
    margin-bottom: 5px;
}

.title-bottom {
    margin-top: 0px;
    font-size: 40px;
}

.made-by {
    font-size: 15px;
    position: absolute;
}

.middle-text {
    padding-top: 20px;
    padding-bottom: 20px;
    margin-left: 30px;
    margin-right: 30px;
}

.middle-text-bottom {
    margin-top: 20px;
}

.right-text {
    padding-right: 20px;
}

.card-choice {
    display: grid;
    height: 100%;
}

.card-choice-title {
    text-align: center;
    vertical-align: top;
    padding-top: 20px;
    font-size: 30px;
    font-weight: 700;
    margin-bottom: 35px;
}

.card-img-choice-menu {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.card-img {
    padding-left: 25px;
    padding-bottom: 80px;
    width: 150px;
    object-fit: contain;
}

.card-choice-menu {
    padding-right: 20px;
    padding-top: 70px;
}

.bottom-section {
    display: grid;
    grid-template-columns: 460px 1fr;
    grid-template-rows: 90vh;
    gap: 10px;
    padding-bottom: 20px;
}

.bottom-left-section {
    border: 3px solid rgb(203, 203, 203);
}

.bottom-right-section {
    border: 3px solid rgb(203, 203, 203);
    max-height: 240;
    overflow: auto;
    resize: vertical;
}

.barchart-img-wrapper {
    max-width: 900px;


}

.barchart-img {
    width: 800px;
    padding-right: 20px;
    padding-left: 20px;
    margin-top: 15px;        
    object-fit: contain;
}

